--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">ViewApp</string>
+    <string name="app_name">Дни рождения</string>
+    <string name = "add">Добавить</string>
 </resources>
