--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Дни рождения</string>
-    <string name = "add">Добавить</string>
+    <string name="add">Добавить</string>
+    <string name="title_activity_birthday">BirthdayActivity</string>
 </resources>
